Mon Jul 27 00:06:20 1998  Geoffrey King  <gjking@mit.edu>

	* krlogin.c (main): Apply ghudson's patch so that rlogin -a
	no longer dumps core. [krb5-appl/612]

1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* login.c (dolastlog): BSD 4.4 systems don't have lastlog.h, but
		still define struct lastlog somewhere.  Included from Dima
		Ruban's FreeBSD patches.

	* krlogin.c: Include sys/ioctl_compat.h if it is present (instead
		of just for 386BSD).  

	* loginpaths.h (LPATH): If the OS provides _PATH_DEFPATH, use it
		to define LPATH and RPATH.

	* login.c: #include paths.h if present, and use it to set the
		pathnames for certain common files.

	* configure.in (withval): Check for <sys/ioctl_compat.h> and
	   <paths.h>

Sat May 16 16:07:42 1998  Tom Yu  <tlyu@mit.edu>

	* login.c: Replace strcpy with strncpy in places.  Add nul
	termination to some existing invocations of strncpy.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Add a check for the header file krb4-proto.h.
		Replace file existence tests for /etc/environment and
		/etc/TIMEZONE with K5_AC_CHECK_FILES.

	* login.c (main): 
	* krshd.c (main): 
	* krlogind.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Sat Feb 28 10:44:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Clean up configure script.  Check $cross_compiling
		instead of (no longer correct) cache variable; remove
		obsolete AC_C_CROSS.  Use AC_CHECK_FUNCS instead of
		individual AC_FUNC_CHECK calls for speed.  Change checks
		for strsave and utimes to use AC_CHECK_FUNCS

	* krcp.c, v4rcp.c: Change usages of HAS_STRSAVE and HAS_UTIMES to
	 	HAVE_*.

Tue Feb 24 14:52:33 1998  Tom Yu  <tlyu@mit.edu>

	* kcmd.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]
	
	* krcp.c: Integrate ghudson's changes for client-side krb4
	compatibility. [krb5-appl/483]

	* krlogin.c: Integrate ghudson's changes for client-side krb4